--- a/神経.md
+++ b/神経.md
@@ -1,3 +1,42 @@
+# 脳
+## 前頭葉
+- 前頭連合野：精神活動（社会性行動障害，遂行機能障害）
+- Broca野（**左半球**）：**運動性言語**（Broca失語）
+- 一次運動野：随意運動（錐体路徴候）
+
+## 頭頂葉
+- 一次体性感覚野
+- 頭頂連合野
+    - 上頭頂小葉：感覚の統合（構成障害，半側空間無視（右半球））
+    - 下頭頂小葉：物体の認識，読み書き計算（観念運動性失行，ゲルストマン症候群，失読失書）
+
+## 側頭葉
+- 聴覚野：聴覚
+- ウェルニッケ野（**左**）：**感覚性言語**（ウェルニッケ失語）
+- 側頭連合野：資格性認知（物体失認，相貌失認）
+
+## 後頭葉
+- 視覚野：視覚（同名性半盲）
+
+# 失語
+## ブローカー失語
+- 運動性失語だから喋れないだけで，理解はできる
+- 非流暢，発語↓，言語理解○，復唱×
+
+## ウェルニッケ失語
+- 感覚性失語だから喋れるけど，理解はできない
+- 流暢，発語↑，言語理解×，復唱×
+
+## 伝導性失語
+- 復唱のみ×
+
+## 健忘性失語
+- 流暢，言語理解，復唱：ぜんぶできる
+
+## 全失語
+- 流暢，言語理解，復唱：ぜんぶできない
+
+
 # 腱反射
 腱の叩打⇒筋の進展⇒筋紡錘の興奮⇒（感覚N）⇒脊髄前角細胞↑⇒（運動N）⇒筋の収縮
 
