--- a/救急.md
+++ b/救急.md
@@ -37,6 +37,10 @@
 - 2：除脳硬直（上腕進展）
 - 1：反応なし
 
+# 切迫するD
+- GCS≦8，瞳孔不同，クッシング現象（徐脈，収縮期血圧上昇，脈圧増大）
+- 上記の場合，ABCの安定を確認してから頭部CT
+
 # 体位
 - 胸膝位（back，doggy）
 - 砕石位（normal，missionary）
