--- a/消化器.md
+++ b/消化器.md
@@ -45,7 +45,16 @@
 - CP分類の脳症をICG試験15分値に置換
 - 肝切除範囲はBilとICGで決定
 
-# 胃切除後合併症（ダンピング）
+# 胃切除後合併症
+## ダンピング症候群
+- 早期ダンピング
+    - 食後20~30min
+    - 食物が高張⇒循環血漿量↓⇒腹痛，嘔吐，頻脈，発汗
+
+- 後期ダンピング
+    - 食事による一過性のhighBS⇒インスリン過剰分泌⇒lowBS
+
+## その他
 - 逆流性食道炎
 - 胆石
 - 鉄欠
