--- a/腎内代・泌.md
+++ b/腎内代・泌.md
@@ -10,26 +10,30 @@
 - 放屁
 
 ## ビグアナイド（メトホルミン）
--  糖新生＠肝臓↓
--  乳酸アシドーシス，**脱水**
+- 糖新生＠肝臓↓
+- 乳酸アシドーシス，**脱水**
 
 ## チアゾリジン（ピオグリタゾン）
--  脂肪細胞PPARγアゴニスト
--  インスリン抵抗性改善
--  体重増加，edema
+- 脂肪細胞PPARγアゴニスト
+- インスリン抵抗性改善
+- 体重増加，edema
+- 骨折
 
 ## DPP-4i
 -  GLP-1↑⇒BS↓
 -  インクレチン作動薬，体重〜
+- 間質性肺炎
 
 ## SGLT-2i（〜フロジン）
--  糖の取り込み＠近位尿細管↓
--  BS↓，体重↓，BP↓，脂質代謝改善
--  血糖依存的
+- 糖の取り込み＠近位尿細管↓
+- BS↓，体重↓，BP↓，脂質代謝改善
+- 血糖依存的
+- 脱水
 
 ## GLP-1R作動薬（〜チド）
--  DPP4に分解されにくいGLP-1アナログ
--  血糖依存的
+- DPP4に分解されにくいGLP-1アナログ
+- 血糖依存的
+- 食欲減退で体重減少
 
 # DM
 ## 診断基準
