--- a/救急.md
+++ b/救急.md
@@ -37,6 +37,25 @@
 - 2：除脳硬直（上腕進展）
 - 1：反応なし
 
+# 心停止
+- 心静止 (asystole)
+    - 心電図は平坦．電気的に活動していない．
+- 無脈性電気活動 (pulseless electrical activity)
+    - 収縮波形あり，拍出なし
+- 無脈性心室頻拍 (pulseless VT)
+    - 心室頻拍だが拍出なし
+- 心室細動 (VF)
+    - 不規則に収縮，統一した収縮運動なし
+    
+# AEDの適応
+## 除細動（Defibrillation）
+- 波形を無視して通電
+- 心室細動（VF）・無脈性心室頻拍（VT）
+
+## 同期性通電（Cardioversion）
+- 心波形に同期して通電
+- 適応疾患：心房細動（Af）・心房粗動（AF）・心室頻拍（VT）・発作性上室性頻拍（PSVT）
+
 # 切迫するD
 - GCS≦8，瞳孔不同，クッシング現象（徐脈，収縮期血圧上昇，脈圧増大）
 - 上記の場合，ABCの安定を確認してから頭部CT
