--- a/救急.md
+++ b/救急.md
@@ -49,12 +49,10 @@
     
 # AEDの適応
 ## 除細動（Defibrillation）
-- 波形を無視して通電
-- 心室細動（VF）・無脈性心室頻拍（VT）
+- VF（心室細動），パルスレスVT（無脈性心室頻拍）
 
 ## 同期性通電（Cardioversion）
-- 心波形に同期して通電
-- 適応疾患：心房細動（Af）・心房粗動（AF）・心室頻拍（VT）・発作性上室性頻拍（PSVT）
+- Af，AF，VT，PSVT（発作性上室性頻拍）
 
 # 切迫するD
 - GCS≦8，瞳孔不同，クッシング現象（徐脈，収縮期血圧上昇，脈圧増大）
