--- a/救急.md
+++ b/救急.md
@@ -46,7 +46,10 @@
     - 心室頻拍だが拍出なし
 - 心室細動 (VF)
     - 不規則に収縮，統一した収縮運動なし
-    
+
+# 胸腔穿刺
+肋骨上縁でやる
+
 # AEDの適応
 ## 除細動（Defibrillation）
 - VF（心室細動），パルスレスVT（無脈性心室頻拍）
