--- a/神経.md
+++ b/神経.md
@@ -36,6 +36,48 @@
 ## 全失語
 - 流暢，言語理解，復唱：ぜんぶできない
 
+# 髄液検査
+## 糖が下がる
+- 結核性髄膜炎
+- 細菌性髄膜炎
+- 真菌性髄膜炎
+- 癌性髄膜炎
+- SAH
+
+## ギラン・バレー
+- 細胞～，蛋白↑，**蛋白細胞解離**
+- 先行感染に伴う抗体⇒軸索に対する自己抗体：抗ガングリオシド抗体
+- カンピロ
+- 発症時には抗体が十分作られている⇒ステロイドは無効
+- 免グロ，血漿交換
+
+## 細菌性髄膜炎
+- 混濁，圧亢進
+- 細胞数万↑↑↑，蛋白↑，糖↓
+- 抗菌薬投与
+- 新生児：B溶連＞大腸菌
+- 小児：B溶連＞インフルエンザ菌＞大腸菌
+- 4ヶ月以降：肺炎球菌＞インフルエンザ菌
+
+## ウイルス性髄膜炎
+- 細胞数～，蛋白～↑，糖～，所見に乏しい
+- 対症療法
+
+## 結核性髄膜炎
+- キサントクロミー（髄液が黄色）
+- 細胞↑，蛋白↑，糖↓
+- 結核菌検出：フィブリンネット，チールネルゼン
+- 多剤併用療法（3＋1）：
+    - イソニアジド（INH）
+    - リファンピシン（RFP）
+    - ピラジナミド（PZA）
+    - エタンブトール（EB） or ストレプトマイシン（SM）
+
+## 真菌性髄膜炎
+- クリプトコッカスが最多
+- 細胞数↑，蛋白↑，糖↓
+- 真菌検出：墨汁染色
+- アムホテリシンB
 
 # 腱反射
 腱の叩打⇒筋の進展⇒筋紡錘の興奮⇒（感覚N）⇒脊髄前角細胞↑⇒（運動N）⇒筋の収縮
