--- a/腎内代・泌.md
+++ b/腎内代・泌.md
@@ -48,11 +48,41 @@ Ucr / Pcr × V
 =UV/P
 Crは腎臓を通ったら全量が外へ行く
 
+# アルドステロン症
+## 原発性Ald症（PA）
+- 何らかの理由でAldがじゃぶじゃぶでる
+- レニンは下がる（PAC（血漿レニン活性）/PRA（血漿Ald濃度）＞200）
+- Aldが過剰⇒Na↑，K↓，BP↑，浮腫，筋力低下（周期性四肢麻痺），テタニー，代謝性アルカローシス
+- そもそもRAA系は陸上生物がNaと水を失って死なないようにするための防衛機構
 
+## 続発性Ald症（SA）
+- 多臓器の障害でRAA系↑
+- 肝臓：肝硬変（edema，循環血漿量↓⇒腎血流量↓）
+- 腎臓：腎血管性高血圧症，バーター症候群、，ネフローゼ，ギッテルマン症候群
 
+## 偽性Ald症
+- リドル症候群：チャネルの異常でAldがないのにONになる
+  - だから常にAldが効いているような状態
+  - 血漿Ald↓，血漿レニン↓
+- グリチルリチンの副作用：甘草，リコリス飴
 
+# 汎下垂体機能低下症（シーハンとか）
+- **ACTH↓，TSH↓のときはコルチゾル補充優先**
+- ∵甲状腺H投与でコルチゾル代謝↑⇒**副腎不全**
 
+## ACTH↓
+- コルチゾール欠乏（CRH→ACTH→糖質コルチコイド軸，コルチゾル：蛋白→糖の変換，血糖↑）
+- 易疲労感，血圧↓，血糖↓，筋力↓，Na↓
+- ACTHが過剰産生されると色素沈着を起こすが，本症例では該当しない
 
+## TSH↓
+- 成長障害，低体温，皮膚乾燥
+
+## LH/FSH↓
+- 無月経，陰毛腋毛の脱落
+
+## PRL↓
+- 乳汁分泌障害
 
 
 
