--- a/神経.md
+++ b/神経.md
@@ -36,6 +36,36 @@
 ## 全失語
 - 流暢，言語理解，復唱：ぜんぶできない
 
+# もやもや病
+- 東アジアに多，家族性10%
+- 病態機序
+    - 内頸A終末閉塞⇒Willis動脈輪前半部閉塞
+    - 前・中大脳動脈の支配領域への血流↓
+    - 基底核部への穿通枝：側副血行路
+- 小児：過換気⇒脳虚血，片麻痺，感覚障害
+- 成人：脳出血
+
+# 脳梗塞
+## アテローム血栓性脳梗塞
+- 高血圧，DM，喫煙，飲酒
+- 主幹Aのアテローム硬化による
+- TIA
+- 安静時発症
+- 緩徐に進行
+
+## 心原性脳塞栓症
+- 心房細動，弁膜症
+- 塞栓性に発生
+- 日常活動中発生
+- 突発に進行
+
+## ラクナ梗塞
+- 高血圧，DM
+- 穿通枝の閉塞
+- 突発～緩徐
+- 意識障害はない
+- ラーメン二郎府中店の親父さん？
+
 # 髄液検査
 ## 糖が下がる
 - 結核性髄膜炎
