--- a/神経.md
+++ b/神経.md
@@ -45,6 +45,33 @@
 - 小児：過換気⇒脳虚血，片麻痺，感覚障害
 - 成人：脳出血
 
+# ワレンベルグ症候群（延髄外側症候群）
+## 病態
+- 椎骨A，後下小脳Aの閉塞
+
+## 症状
+- 延髄内側：錐体路（運動系の経路）や内側毛帯（深部覚の経路）は**障害されない**
+- 基本は**温痛覚障害：同側顔面，対側体幹**
+
+### 障害側と同側
+- VIII（聴N）障害
+    - 嘔吐，悪心，めまい，眼振
+- 疑核・孤束核（IX（舌咽N）・X（迷走N））障害
+    - 球麻痺（嚥下障害・構音障害・嗄声）
+    - カーテン徴候
+    - 味覚障害
+- 下小脳脚障害
+    - 上下肢の小脳症状
+- 交感N障害
+    - ホルネル症候群
+- 三叉神経脊髄路核障害
+    - **顔面の温痛覚障害**
+
+### 障害側と対側
+- 外側脊髄視床路障害
+    - 頸部以下，**体幹・上下肢の温痛覚障害**
+
+
 # 脳梗塞
 ## アテローム血栓性脳梗塞
 - 高血圧，DM，喫煙，飲酒
@@ -145,6 +172,8 @@
 - DOPA遊離促進：アマンタジン
 - モノアミン酸化Enz-i（MAO-Bi）
     - MAO-B（細胞内でDOPAを代謝）↓
+- アデノシンA2A
+    - アデノシン
 - COMTi（w/L-DOPA）
     - 末梢でL-DOPAを代謝するCOMT↓⇒L-DOPA↑
 
