--- a/神経.md
+++ b/神経.md
@@ -18,6 +18,24 @@
 ## 後頭葉
 - 視覚野：視覚（同名性半盲）
 
+# 慢硬・急硬
+## 急性硬膜外血腫
+- そ「と」だから「と」つれんず
+- 開頭，血腫除去
+- 経時CT ∵ Lucid interval
+- 中硬膜A，静脈洞
+- 予後良好
+
+## 急性硬膜下血腫
+- 三日月
+- 予後不良
+- 対側損傷もある
+
+## 慢性硬膜下血腫
+- 慢性，高齢，１ヶ月前にころんだエピ
+- 圧排側脳室
+- ドレナージ穿頭
+
 # 失語
 ## ブローカー失語
 - 運動性失語だから喋れないだけで，理解はできる
