--- a/神経.md
+++ b/神経.md
@@ -19,6 +19,9 @@
 - 視覚野：視覚（同名性半盲）
 
 # 慢硬・急硬
+- 急性なら開頭，血腫除
+- 慢性なら**血腫は流動性**なので穿頭ドレナージ
+
 ## 急性硬膜外血腫
 - そ「と」だから「と」つれんず
 - 開頭，血腫除去
@@ -28,13 +31,15 @@
 
 ## 急性硬膜下血腫
 - 三日月
+- 開頭，血腫除去
 - 予後不良
 - 対側損傷もある
 
 ## 慢性硬膜下血腫
 - 慢性，高齢，１ヶ月前にころんだエピ
-- 圧排側脳室
 - ドレナージ穿頭
+- 圧排側脳室
+
 
 # 失語
 ## ブローカー失語
